# DC32-cfw

./: .gitignore  .gitmodules  .replit  CMakeLists.txt  README.md  dispDefcon.c  dispDefcon.h  linker_rp2350_defcon.lkr  main_rp2350_defcon.c  pioI2C.c  replit.md  replit.nix  settings.c  settings.h  ui.c
.github/workflows/: build.yml  nightly.yml
assets/icons/: manifest.json
assets/icons/1f300/: 32.dcei  48.dcei  64.dcei
assets/icons/1f31f/: 32.dcei  48.dcei  64.dcei
assets/icons/1f3ae/: 32.dcei  48.dcei  64.dcei
assets/icons/1f3af/: 32.dcei  48.dcei  64.dcei
assets/icons/1f3b5/: 32.dcei  48.dcei  64.dcei
assets/icons/1f3d3/: 32.dcei  48.dcei  64.dcei
assets/icons/1f426/: 32.dcei  48.dcei  64.dcei
assets/icons/1f430/: 32.dcei  48.dcei  64.dcei
assets/icons/1f431/: 32.dcei  48.dcei  64.dcei
assets/icons/1f479/: 32.dcei  48.dcei  64.dcei
assets/icons/1f48e/: 32.dcei  48.dcei  64.dcei
assets/icons/1f4a3/: 32.dcei  48.dcei  64.dcei
assets/icons/1f4c0/: 32.dcei  48.dcei  64.dcei
assets/icons/1f4df/: 32.dcei  48.dcei  64.dcei
assets/icons/1f4e6/: 32.dcei  48.dcei  64.dcei
assets/icons/1f4fa/: 32.dcei  48.dcei  64.dcei
assets/icons/1f504/: 32.dcei  48.dcei  64.dcei
assets/icons/1f50c/: 32.dcei  48.dcei  64.dcei
assets/icons/1f527/: 32.dcei  48.dcei  64.dcei
assets/icons/1f579-fe0f/: 32.dcei  48.dcei  64.dcei
assets/icons/1f5b1-fe0f/: 32.dcei  48.dcei  64.dcei
assets/icons/1f5bc-fe0f/: 32.dcei  48.dcei  64.dcei
assets/icons/1f967/: 32.dcei  48.dcei  64.dcei
assets/icons/1f996/: 32.dcei  48.dcei  64.dcei
assets/icons/1f9ca/: 32.dcei  48.dcei  64.dcei
assets/icons/1f9f1/: 32.dcei  48.dcei  64.dcei
assets/icons/26bd/: 32.dcei  48.dcei  64.dcei
build-boot-clean/: .ninja_deps  .ninja_log  CMakeCache.txt  DC32-cfw  DC32-cfw.uf2  build.ninja  cmake_install.cmake  dcapp_build_contract.h
build-boot-clean/doom_dc32/: d_main_dc32.c  m_menu_dc32.c  pd_render_dc32.cpp  r_data_whd_dc32.c  r_things_dc32.c
build-boot-verify/: CMakeCache.txt
build-stage11-clean/: .ninja_deps  .ninja_log  CMakeCache.txt  DC32-cfw  DC32-cfw.uf2  build.ninja  cmake_install.cmake  dcapp_build_contract.h
build-stage11-clean/doom_dc32/: v_video_dc32.c
cmake/: arm-none-eabi.cmake  check_size.cmake
docs/: sd-app-roadmap.md
sdk/: DC32App.cmake
src/: DC32-cfw  DC32-cfw.picotool-layout.uf2  DC32-cfw.uf2  DC32-cfw.workflow-test.uf2  Makefile  abcPlayer.c  abcPlayer.h  audioPwm.c  audioPwm.h  audio_pwm.c  badUsb.c  badUsb.h  badgeLeds.c  badgeLeds.h  badgePower.c  badgePower.h  badgeRtc.h  bootGuard.c  bootGuard.h  chars.c  chars.h  crt_rp2040.S  crt_rp2350.S  dcApp.c  dcApp.h  dcAppDraw.c  dcAppDraw.h  dispDefcon.c  dispDefcon.h  fatfs.c  fatfs.h  flipper_ir.c  flipper_ir.h  fonts.c  fonts.h  frontend.h  gb.avr.h  gb.c  gb.h  gbC.c  (+80 more)
src/apps/: arduboy_app.c  autoclicker_app.c  badusb_app.c  demos.c  demos_app.c  demos_app.h  flipper_app.c  flipper_remote.c  flipper_remote.h  flipper_tusb_config.h  flipper_usb_host.c  flipper_usb_host.h  gamepad_app.c  gb_app.c  image_app.c  ir_app.c  music_app.c  nes_app.c  picoware_app.c  picoware_app.h  picoware_ports.c  pwnagotchi_app.c  pwnagotchi_remote.c  pwnagotchi_remote.h  raspyjack_app.c  raspyjack_remote.c  raspyjack_remote.h  tool_app.h
src/apps/arkanoid/: arkanoid_app.c  arkanoid_port.c  arkanoid_port.h
src/apps/cave/: cave_app.c  cave_port.h
src/apps/chips/: chips_app.c  chips_port.c  chips_port.h  chips_tworld_glue.c  chips_tworld_solution.c
src/apps/doom/: config.h  doom_app.c  doom_dc32.h  doom_dc32_platform.c  doom_dc32_sound.c  doom_dc32_stubs.c  doom_w_file_memory.c
src/apps/flappy/: flappy_app.c  flappy_port.c  flappy_port.h
src/apps/lasertag/: lasertag.c  lasertag.h  lasertag_app.c
src/apps/openjazz/: SDL.h  openjazz_app.cpp  openjazz_cache.cpp  openjazz_cache.h  openjazz_heap.c  openjazz_heap.h  openjazz_install.cpp  openjazz_install.h  openjazz_memory.cpp  openjazz_memory.h  openjazz_pack.cpp  openjazz_pack.h  openjazz_prebuild.h  openjazz_sdl.cpp  openjazz_sound_stub.cpp
src/apps/pipe/: pipe_app.cpp  pipe_port.h
src/apps/pong/: pong_app.c
src/apps/port/: port_runtime.c  port_runtime.h
src/apps/scorch/: scorch_app.c  scorch_port.h
src/arduboy/: arduboy.h  arduboy_ardens_port.cpp  arduboy_format.cpp  arduboy_port.cpp  arduboy_simavr_port.cpp
src/build_codex/: DC32-cfw  uGB
src/inc_RP2350/: 2350.h
src/nes/: FrensHelpers.h  InfoNES.cpp  InfoNES.h  InfoNES_FDS.h  InfoNES_Mapper.cpp  InfoNES_Mapper.h  InfoNES_NSF.h  InfoNES_System.h  InfoNES_pAPU.cpp  InfoNES_pAPU.h  K6502.cpp  K6502.h  K6502_rw.h  nes.h  nes_analyze.c  nes_port.cpp  pico.h
tools/: abc_player_test.py  arduboy_execution_window_test.cpp  arduboy_fast_dispatch_test.cpp  arduboy_hybrid_static_test.py  arduboy_perf_test.py  arkanoid_port_test.py  badusb_regression_test.c  bin_to_uf2.py  boot_guard_static_test.py  build_arduboy_perf_hex.py  build_arkanoid_assets.py  build_cave_assets.py  build_cave_pack.py  build_chips_pack.py  build_dcapp_sdk.py  build_emoji_icons.py  build_flappy_assets.py  build_nes_perf_rom.py  build_openjazz_pack.py  build_period_assets.py  build_port_assets.py  build_sd_zip.py  build_sd_zip_test.py  build_soccer_assets.py  build_trex_assets.py  build_tworld_assets.py  build_xscorch_assets.py  build_xsokoban_assets.py  cave.pak  chips.pak  dcapp_sdk_test.py  dcapp_static_test.py  exit_cleanup_fixture_test.py  exit_cleanup_static_test.py  fatfs_regression_test.c  flappy_port_test.py  flipper_badge_bridge_test.py  gen_dcapp_abi_veneers.py  gen_dcapp_build_contract.py  gen_dcapp_host_symbols.py  (+25 more)
tools/flipper-badge-bridge/: PROTOCOL.md  README.md  defaults.env  flipper-badge-bridge.service  flipper_badge_bridge.py  install.sh  uninstall.sh
tools/pwnagotchi-badge-bridge/: PROTOCOL.md  README.md  defaults.env  install.sh  pwnagotchi-badge-bridge.service  pwnagotchi_badge_bridge.py  uninstall.sh
tools/raspyjack-badge-bridge/: PROTOCOL.md  README.md  defaults.env  install.sh  optional-raspyjack-mirror-rate.patch  raspyjack-badge-bridge.service  raspyjack_badge_bridge.py  uninstall.sh
(+54 files in other folders)
